--- a/app.json
+++ b/app.json
@@ -36,6 +36,14 @@
       "plugins": [
         "expo-router"
       ]
+    },
+    "android": {
+      "package": "com.android"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "17ce2888-b1e9-4860-af64-d6c091c5842b"
+      }
     }
   }
 }
