--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,18 @@
 {
   "build": {
-    "release": {
+    "development": {
       "android": {
         "buildType": "apk"
+      }
+    },
+    "preview": {
+      "android": {
+        "buildType": "app-bundle"
+      }
+    },
+    "production": {
+      "android": {
+        "buildType": "app-bundle"
       }
     }
   }
